applauncherd (0.15.2) unstable; urgency=low

  * Fixes: NB#205006 - Redundant(?) booster-monitor processes takes a lot of memory

 -- Alexey Shilov <alexey.shilov@nokia.com>  Tue, 23 Nov 2010 17:10:56 +0200

applauncherd (0.15.1) stable; urgency=low

  * Fixes: NB#201779 - cheap way how to load all libraries correct 
  * Fixes: NB#206309 - applauncherd cannot locate shared objects
  * Changes: Launcher library exports only main()
  * Changes: Install /usr/bin/applauncherd.launcher to /usr/lib/libapplauncherd.so
             due to dh_strip problems and because it's not -pie.
  * Changes: Added the "startup time from application grid" test 
  * Implemented: SWP#DUI-4282

 -- Jussi Lind <jussi.lind@nokia.com>  Fri, 19 Nov 2010 14:20:22 +0200

applauncherd (0.15.0) stable; urgency=low

  * Changes: Basic implementation of library-based launcher
  * Fixes: NB#205663 - crashes due to exit() is used in forked process

 -- Jussi Lind <jussi.lind@nokia.com>  Fri, 19 Nov 2010 14:20:22 +0200

applauncherd (0.14.6) stable; urgency=low

  * Fixes: NB#199342 - Music-suite crashes when started using invoker
  * Changes: Add test_invoker_search_prog to tests.xml
  * Changes: Add a test for invoker searching PATH for programs
  * Changes: Moved the implementation of MonitorBooster::boosterType() to the source file from the header file
  * Changes: Remove invoke_recv_str as it is never used

 -- Nimika Keshri <nimika.1.keshri@nokia.com>  Wed, 10 Nov 2010 11:51:05 +0200

applauncherd (0.14.5) stable; urgency=low

  * Changes: acceptance and validation flags removed for tests package
  * Changes: Tests fixed as the default --wait-term made them fail
  * Revert "Changes: Too exact library versions made more general in preload.h"
  * Changes: no-wait option for invoker is added
  * Changes: invoker - launcher protocol simplification

 -- Nimika Keshri <nimika.1.keshri@nokia.com>  Tue, 02 Nov 2010 14:06:55 +0200

applauncherd (0.14.4) stable; urgency=low
